--- a/src/templates/problem/problems.html
+++ b/src/templates/problem/problems.html
@@ -64,8 +64,9 @@
     </table>
 </div>
 <script>
-    function selectCategory(value) {
-        var kvp = document.location.search.substr(1).split('&');
+    document.getElementById("category-selector").addEventListener("change", function() {
+        let value = this.value;
+        let kvp = document.location.search.substr(1).split('&');
         let i = 0;
         for (; i < kvp.length; i++) {
             if (kvp[i].startsWith('category=')) {
@@ -88,6 +89,6 @@
             }
         }
         document.location.search = kvp.join('&');
-    }
+    });
 </script>
 {% endblock %}
