--- a/src/templates/error/maintenance.html
+++ b/src/templates/error/maintenance.html
@@ -5,9 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#0d6efd">
 
-        <link rel="stylesheet"
-              href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-              crossorigin="anonymous">
+        <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
         <link href="/assets/css/style.css" rel="stylesheet">
         <link href="/static/favicon.png" rel="icon">
 
