--- a/src/templates/auth/forgotpassword.html
+++ b/src/templates/auth/forgotpassword.html
@@ -15,7 +15,7 @@
 </form>
 <br>
 <p>
-    If there is an account associated with the email you provided, a link to reset your password 
-    has been sent to that link. Be sure to check your spam folder!
+    If there is an account associated with the email you provided, a link to reset your password
+    will be sent to that link. Be sure to check your spam folder!
 </p>
 {% endblock %}
