--- a/src/templates/admin/console.html
+++ b/src/templates/admin/console.html
@@ -25,7 +25,7 @@
                 <a class="btn btn-primary" href="/admin/createannouncement" role="button">Create Announcement</a>
                 <br>
                 <br>
-                <a class="btn btn-primary" href="/admin/createcontest" role="button">Create Contest</a>
+                <a class="btn btn-primary" href="/contests/create" role="button">Create Contest</a>
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@
             <div class="card-body">
                 <h5 class="card-title">Manage Problems</h5>
                 <p class="card-text">Create problems and view draft problems.</p>
-                <a class="btn btn-primary" href="/admin/createproblem" role="button">Create Problem</a>
+                <a class="btn btn-primary" href="/problems/create" role="button">Create Problem</a>
                 <br>
                 <br>
                 <a class="btn btn-primary" href="/problems/draft" role="button">Draft Problems</a>
