add navbar highlighting

--- a/src/templates/admin/console.html
+++ b/src/templates/admin/console.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Admin Console{% endblock %}
+{% block active %}Admin Console{% endblock %}
 
 {% block main %}
 <h1>Admin Console</h1>
