--- a/src/templates/admin/createannouncement.html
+++ b/src/templates/admin/createannouncement.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Create Announcement{% endblock %}
+{% block active %}Admin Console{% endblock %}
 
 {% block main %}
 <h1>Create Announcement</h1>
