--- a/src/templates/admin/edithomepage.html
+++ b/src/templates/admin/edithomepage.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Edit Homepage{% endblock %}
+{% block active %}Admin Console{% endblock %}
 
 {% block preload %}
 <link rel="preload" href="/api/homepage" as="fetch" crossorigin="anonymous">
