--- a/src/templates/admin/submissions.html
+++ b/src/templates/admin/submissions.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Submissions{% endblock %}
+{% block active %}Admin Console{% endblock %}
 
 {% block main %}
 <h1>Submissions</h1>
