--- a/src/templates/admin/users.html
+++ b/src/templates/admin/users.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Users{% endblock %}
+{% block active %}Admin Console{% endblock %}
 
 {% block main %}
 <h1>Users</h1>
