--- a/src/templates/auth/changepassword.html
+++ b/src/templates/auth/changepassword.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Change Password{% endblock %}
+{% block active %}Settings{% endblock %}
 
 {% block main %}
 <h1>Change Password</h1>
