--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Login{% endblock %}
+{% block active %}Log In{% endblock %}
 
 {% block main %}
 <h1 class="text-center">Log In</h1>
