--- a/src/templates/auth/register.html
+++ b/src/templates/auth/register.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Register{% endblock %}
+{% block active %}Register{% endblock %}
 
 {% block main %}
 <h1 class="text-center">Register</h1>
