--- a/src/templates/contest/contest.html
+++ b/src/templates/contest/contest.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}{{ title }}{% endblock %}
+{% block active %}Contests{% endblock %}
 
 {% block main %}
 <div style="position: relative; margin-bottom: 0.5rem;">
