--- a/src/templates/contest/contest_noexist.html
+++ b/src/templates/contest/contest_noexist.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Nonexistent contest{% endblock %}
+{% block active %}Contests{% endblock %}
 
 {% block main %}
 <h1>Nonexistent contest</h1>
