--- a/src/templates/contest/contests.html
+++ b/src/templates/contest/contests.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Contests{% endblock %}
+{% block active %}Contests{% endblock %}
 
 {% block main %}
 <h1>Future Contests</h1>
