--- a/src/templates/contest/create.html
+++ b/src/templates/contest/create.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Create Contest{% endblock %}
+{% block active %}Contests{% endblock %}
 
 {% block main %}
 <h1>Create Contest</h1>
