--- a/src/templates/contest/create_problem.html
+++ b/src/templates/contest/create_problem.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Create Problem{% endblock %}
+{% block active %}Contests{% endblock %}
 
 {% block main %}
 <h1>Create Problem</h1>
