--- a/src/templates/contest/delete_confirm.html
+++ b/src/templates/contest/delete_confirm.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Delete {{ data }}{% endblock %}
+{% block active %}Contests{% endblock %}
 
 {% block main %}
 <h1 >Delete {{ data }}</h1>
