--- a/src/templates/contest/draft_problems.html
+++ b/src/templates/contest/draft_problems.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}{{ title }} Draft Problems{% endblock %}
+{% block active %}Contests{% endblock %}
 
 {% block main %}
 <h1>{{ title }} Draft Problems</h1>
