--- a/src/templates/contest/notify.html
+++ b/src/templates/contest/notify.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Notify Participants{% endblock %}
+{% block active %}Contests{% endblock %}
 
 {% block main %}
 <h1>Notify Participants</h1>
