--- a/src/templates/contest/scoreboard.html
+++ b/src/templates/contest/scoreboard.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}{{ title }} Scoreboard{% endblock %}
+{% block active %}Contests{% endblock %}
 
 {% block main %}
 <h1><a href="{{ request.path[:-11] }}">{{ title }}</a></h1>
