--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Home{% endblock %}
+{% block active %}Home{% endblock %}
 
 {% block main %}
 <h1>Announcements</h1>
