--- a/src/templates/problem/draft_problems.html
+++ b/src/templates/problem/draft_problems.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Draft Problems{% endblock %}
+{% block active %}Practice{% endblock %}
 
 {% block main %}
 <h1>Draft Problems</h1>
