--- a/src/templates/problem/problems.html
+++ b/src/templates/problem/problems.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Problems{% endblock %}
+{% block active %}Practice{% endblock %}
 
 {% block main %}
 <h1>Problems</h1>
