--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Settings{% endblock %}
+{% block active %}Settings{% endblock %}
 
 {% block main %}
 <h1>Settings</h1>
