--- a/src/templates/toggle2fa.html
+++ b/src/templates/toggle2fa.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Toggle 2FA{% endblock %}
+{% block active %}Settings{% endblock %}
 
 {% block main %}
 <h1>Toggle 2FA</h1>
