--- a/src/templates/problem/create.html
+++ b/src/templates/problem/create.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Create Problem{% endblock %}
+{% block active %}Practice{% endblock %}
 
 {% block main %}
 <h1>Create Problem</h1>
