--- a/src/templates/problem/edit_editorial.html
+++ b/src/templates/problem/edit_editorial.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Edit Editorial for {{ data["name"] }}{% endblock %}
+{% block active %}Practice{% endblock %}
 
 {% block preload %}
 <link rel="preload" href="/api/problem/editorial/{{ request.path.split('/')[2] }}" as="fetch" crossorigin="anonymous">
