--- a/src/templates/problem/problem_noexist.html
+++ b/src/templates/problem/problem_noexist.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}Nonexistent problem{% endblock %}
+{% block active %}Practice{% endblock %}
 
 {% block main %}
 <h1>Nonexistent problem</h1>
